--- a/infra-configs/    openshift-virtualization  /kustomization.yaml
+++ b/infra-configs/    openshift-virtualization  /kustomization.yaml
@@ -7,5 +7,5 @@ commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
   argocd.argoproj.io/sync-wave: "10"
 
-resources:
-  - hyperconverged.yaml
+# resources:
+#   - hyperconverged.yaml
