--- a/infra-operators/openshift-ai/kustomization.yaml
+++ b/infra-operators/openshift-ai/kustomization.yaml
@@ -8,5 +8,6 @@ commonAnnotations:
   argocd.argoproj.io/sync-wave: "70"
 
 resources:
+  - namespace.yaml
   - operatorgroup.yaml
   - subscription.yaml
