--- a/infra-operators/openshift-ai/subscription.yaml
+++ b/infra-operators/openshift-ai/subscription.yaml
@@ -4,6 +4,8 @@ kind: Subscription
 metadata:
   name: rhods-operator
   namespace: redhat-ods-operator
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true,CreateNamespace=true
 spec:
   channel: fast
   installPlanApproval: Automatic
