--- a/infra-operators/openshift-web-terminal/subscription.yaml
+++ b/infra-operators/openshift-web-terminal/subscription.yaml
@@ -4,6 +4,8 @@ kind: Subscription
 metadata:
   name: web-terminal
   namespace: openshift-operators
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true,CreateNamespace=true
 spec:
   channel: fast
   installPlanApproval: Automatic
