--- a/infra-operators/jaeger-product/subscription.yaml
+++ b/infra-operators/jaeger-product/subscription.yaml
@@ -3,6 +3,8 @@ kind: Subscription
 metadata:
   name: jaeger-product
   namespace: openshift-distributed-tracing
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true,CreateNamespace=true
 spec:
   channel: stable
   installPlanApproval: Automatic
