--- a/infra-operators/mtv/subscription.yaml
+++ b/infra-operators/mtv/subscription.yaml
@@ -3,6 +3,8 @@ kind: Subscription
 metadata:
   name: mtv-operator
   namespace: openshift-mtv
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true,CreateNamespace=true
 spec:
   channel: release-v2.8
   installPlanApproval: Automatic
