--- a/infra-operators/openshift-devspaces/subscription.yaml
+++ b/infra-operators/openshift-devspaces/subscription.yaml
@@ -3,6 +3,8 @@ kind: Subscription
 metadata:
   name: devspaces
   namespace: openshift-operators
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true,CreateNamespace=true
 spec:
   channel: stable
   installPlanApproval: Automatic
