--- a/infra-operators/openshift-virtualization/subscription.yaml
+++ b/infra-operators/openshift-virtualization/subscription.yaml
@@ -3,6 +3,8 @@ kind: Subscription
 metadata:
   name: kubevirt-hyperconverged
   namespace: openshift-cnv
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true,CreateNamespace=true
 spec:
   channel: stable
   installPlanApproval: Automatic
