--- a/infra-operators/servicemeshoperator/subscription.yaml
+++ b/infra-operators/servicemeshoperator/subscription.yaml
@@ -5,6 +5,8 @@ metadata:
     operators.coreos.com/servicemeshoperator.openshift-operators: ''
   name: servicemeshoperator
   namespace: openshift-operators
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true,CreateNamespace=true
 spec:
   channel: stable
   installPlanApproval: Automatic
