Update role-pipeline.yaml - add kubeflow rbac

--- a/quests-configs/coffeeshop-configs/rbac/role-pipeline.yaml
+++ b/quests-configs/coffeeshop-configs/rbac/role-pipeline.yaml
@@ -7,3 +7,7 @@ rules:
       - "tekton.dev"
     resources: ["*"]
     verbs: ["*"]
+  - apiGroups:
+      - "pipelines.kubeflow.org"
+    resources: ["*"]
+    verbs: ["*"]
